objects/Purchase_Order_Line__c.object
<CustomObject>
    <description>This custom object holds the order line information to be passed to Oracle after Online Ordering Process.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BoS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_ID__c</fullName>
        <label>Child ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <label>Item ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Source__c</fullName>
        <label>Item Source</label>
        <picklist>
            <picklistValues>
                <fullName>Ala Carte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartPack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ala Carte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV + Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Pack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Item_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Oracle Item ID reference field of Item Type</description>
        <label>Oracle Item ID</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Line_Type__c</fullName>
        <description>Line Type value to pass to Oracle</description>
        <formula>Text ( Oracle_Item_ID__r.Line_Type__c )</formula>
        <inlineHelpText>Line Type value to pass to Oracle</inlineHelpText>
        <label>Oracle Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Warehouse__c</fullName>
        <label>Oracle Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Number__c</fullName>
        <label>Order Line Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Parent Item)</relationshipLabel>
        <relationshipName>Parent_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <label>Partner Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Quantity * Unit Price</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_per_Box__c</fullName>
        <label>Quantity per Box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <formula>IF(  (Oracle_Item_ID__r.Item_ID__c  =  &apos;500610&apos;), Purchase_Order__r.Requested_Delivery_Date__c + 35 ,Purchase_Order__r.Requested_Delivery_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safe_Harbor_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Safe Harbor Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Purchase Order Lines (Safe Harbor Item)</relationshipLabel>
        <relationshipName>Safe_Harbor_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <label>Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SmartPack_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SmartPack Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>The Unit price of the product per item.</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Seller/Installer to differentiate PO Lines</description>
        <inlineHelpText>Name of Seller/Installer to differentiate PO Lines</inlineHelpText>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order Line</label>
    <nameField>
        <displayFormat>POLine-{0000000000}</displayFormat>
        <label>Purchase Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>